# wimpy

./: .bumpversion.cfg  .editorconfig  .gitignore  .isort.cfg  .pep8  CHANGELOG.md  Dockerfile  Makefile  README.md  coverage.xml  docker-compose-app.yml  docker-compose.yml  requirements.apt  setup.cfg  travis.yaml
.circleci/: config.yml
contrib/: local.env
contrib/data/: wimpy.sql
requirements/: base.txt  dev.txt  prod.txt  test.txt
server/: nginx.conf
src/: manage.py
src/wimpy/: conftest.py  constants.py
src/wimpy/config/: asgi.py  constants.py  settings.py  urls.py  wsgi.py
src/wimpy/events/: admin.py  api.py  apps.py  constants.py  consumers.py  filters.py  models.py  serializers.py  urls.py
src/wimpy/events/management/commands/: consumer.py
src/wimpy/events/management/commands/tests/: test_consumer.py
src/wimpy/events/migrations/: 0001_initial.py
src/wimpy/events/tests/: conftest.py  test_api.py  test_consumers.py  test_models.py  test_serializers.py
src/wimpy/healthcheck/: api.py  apps.py  urls.py
src/wimpy/healthcheck/tests/: test_api.py
src/wimpy/helpers/: data.py
src/wimpy/helpers/tests/: test_data.py
src/wimpy/tests/: test_auth.py
