[metadata]
description_file = README.md

[tool:pytest]
minversion = 6.0
addopts =
    -vv
    -xs
    --spec
    --cov src
    --cov-report xml
    --cov-report term
    --disable-warnings
    --reuse-db
    --ds=wimpy.config.settings
testpaths =
    src
markers =
    integration: Integration tests
